feat(block): add optional minerAddress field for identity-based consensus
Signed-off-by: Dhruv Rakeshbhai patel <dpatel5469@gmail.com>